# maat-kiosk

./: DESIGN_SYSTEM.md  Makefile  README.md  Readme.md  app.json  babel.config.js  notes.md  output.css  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json
app/: _layout.tsx  class-detail.tsx  details.tsx  home.tsx  member-check-in.tsx  member-search.tsx
backend/: .env.example  pyproject.toml
backend/src/: chat_router.py  main.py
backend/src/graphs/: graph.py
backend/test-requests/: chat.http
components/: home.tsx
components/ui/: ThemedText.tsx  app-header.tsx  aspect-ratio.tsx  avatar-custom.tsx  badge.tsx  belt-badge.tsx  card.tsx  class-card.tsx  member-item.tsx
data/: classes.json  gymData.ts  instructors.json
frontend/: index.ts  package-lock.json  package.json  start-ios.sh
frontend/app/: CheckInChat.tsx  EventStreamTest.tsx  _layout.tsx  class-detail.tsx  home.tsx  member-check-in.tsx
frontend/components/tools/: CheckInMatTool.tsx
frontend/components/ui/: alert.tsx  avatar-custom.tsx  badge.tsx  belt-badge.tsx  button.tsx  card.tsx  class-card.tsx  empty-state.tsx  text.tsx
frontend/data/: members.json
frontend/guidelines/: DESIGN_SYSTEM.md  plan.md
frontend/lib/: bleakai.ts  globalFont.ts
frontend/types/: gym.ts
frontend/utils/: GymContext.ts  fuzzyMatch.ts  sseHelper.ts
lib/: mockData.ts  theme.ts
utils/: GymContext.ts
