[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "python-dotenv>=0.9.9",
    "langchain-google-genai>=3.0.0",
    "langgraph-cli>=0.1.0",
    "langchain-openai>=1.0.1",
    "langchain-ollama>=1.0.0a1",
    "langchain-core>=0.3.0",
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "uvicorn>=0.30.0",
]
